--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "inside-nyc",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Contributors",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/eloisebarrow/inside-nyc/issues"
   },
-  "homepage": "https://github.com/eloisebarrow/inside-nyc#readme"
+  "homepage": "https://github.com/eloisebarrow/inside-nyc#readme",
+  "dependencies": {
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.19.2",
+    "pg": "^7.12.1",
+    "sequelize": "^5.18.4"
+  }
 }
