--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "db:create": "dropdb --if-exists seenyc_db && createdb -e seenyc_db",
+    "db:reset": "node resetDb.js",
+    "db:seed": "node seed.js"
   },
   "repository": {
     "type": "git",
