ratings on details page working, but not connected to db yet

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.19.2",
     "pg": "^7.12.1",
+    "react-star-rating-component": "^1.4.1",
     "sequelize": "^5.18.4"
   }
 }
